--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7A.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7A.xhtml
@@ -218,7 +218,7 @@
                         </div>
 
                     </div>
-                    <div class="Container100 Responsive100 summaryPageBtn" style="text-align: center;">
+                    <div id="chngstBtnBock" class="Container100 Responsive100 summaryPageBtn" style="text-align: center;">
                         <p:commandButton styleClass="prev ResponsiveBtnFS Fleft spWid100" id="tcmp7astartover"
                                          value="Start Over" update=":ceForm:inputArea" immediate="true"
                                          actionListener="#{tcmpb.startover}"/>
