--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
@@ -18,7 +18,7 @@
                      style="margin-top:5%;">
                     <div class="Container90 Fnone MarAuto TexAlLeft">
 
-                        <h:form styleClass="formPage">
+                        <h:form id="signupformblock" styleClass="formPage">
                             <div class="EmptyBox5"></div>
                             <p:panel id="signup" styleClass="Container100" style="border:0px; background: transparent; margin-top:0!important;">
 
