--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -90,7 +90,7 @@ hypothetical portfolios over a one year period.<br/>
 
         </div>
         <div class="Container50 Responsive100 Fleft">
-            <p class="AbvportfolioCreation">Please note your preliminary recommended strategy changes with your selections.</p>
+            <p class="AbvportfolioCreation">Please note that your preliminary recommended strategy changes with your selections.</p>
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
         </div>
 
