--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -6,7 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100">
-        <span class="Fs30">Assets</span>
+        <span class="Fs30 mainHeaderUOB">Assets</span>
     </div>
     <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
              style="margin-top: 7px;border: 0px; background: transparent"
