--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
@@ -7,7 +7,7 @@
 
     <p:panel style="border: 0px">
 
-        <div class="Container100 Responsive50 CenterRisk7Only">
+        <div class="Container100 CenterRisk7Only">
             <div class="ContainerIndent">
                 <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
                          style="margin-bottom:7px;border: 0px; background: transparent"
