--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -7,7 +7,7 @@
 
 
     <div class="Container100">
-        <span class="Fs30">Liabilities</span>
+        <span class="Fs30 mainHeaderUOB">Liabilities</span>
     </div>
     <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
              style="margin-top:7px; border: 0px; background: transparent"
