--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
@@ -6,7 +6,7 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <p:panel style="border: 0px">
-    <div class="Container100 Responsive50">
+    <div class="Container100">
         <div class="ContainerIndent">
             <p:panel rendered="#{uobpb.pagemanager.errorMessage != null }"
                      style="border: 0px; background: transparent"
