--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -187,7 +187,7 @@
                                   });
             </script>
 
-            <div class="Container100">
+            <div class="Container100 MarTop20">
                 <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1"
                      style="cursor: pointer;">Summary</div>
                 <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2"
