--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -52,7 +52,7 @@
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:graphArea"/>
+                    update=":ceForm:graphArea, :ceForm:buttonArea"/>
         </p:inputNumber>
 
         <div class="EmptyBox10"></div>
@@ -64,7 +64,7 @@
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
             <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:graphArea"/>
+                    update=":ceForm:graphArea, :ceForm:buttonArea"/>
         </p:inputNumber>
 
     </div>
