--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
@@ -23,7 +23,7 @@
                                   styleClass="riskQ"
                                   layout="pageDirection">
                     <p:ajax listener="#{uobpb.onChangeValue}"
-                            update=":ceForm:graphArea"/>
+                            update=":ceForm:graphArea, :ceForm:buttonArea"/>
                     <f:selectItem itemLabel="Your primary focus is on capital growth. You are prepared to accept a high level of short term volatility
                      and possible capital losses in order to generate potentially higher levels of capital growth over the long term.
 " itemValue="1"/>
