--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q1.xhtml
@@ -22,7 +22,7 @@
                           styleClass=""
                           layout="pageDirection">
           <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:graphArea"/>
+                    update=":ceForm:graphArea, :ceForm:buttonArea"/>
             <f:selectItem itemLabel="My job is very secure." itemValue="1" />
             <f:selectItem itemLabel="My job security could change quickly." itemValue="2" />
             <f:selectItem itemLabel="I am not working or retired but have secure income." itemValue="3" />
