--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q2.xhtml
@@ -21,7 +21,7 @@
             <p:selectOneRadio value="#{uobpb.riskCalculator.ans4}"
                               layout="pageDirection">
                <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:graphArea"/>
+                        update=":ceForm:graphArea, :ceForm:buttonArea"/>
                 <f:selectItem itemLabel="Yes" itemValue="1" />
                 <f:selectItem itemLabel="No" itemValue="2" />
             </p:selectOneRadio>
