--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7A.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/page7A.xhtml
@@ -230,7 +230,7 @@
                             </p:effect>
                         </p:commandButton>
 
-                        <p:commandButton id="tcmp7anext" styleClass="Fright ResponsiveBtnFS spWid100" value="Next"
+                        <p:commandButton id="tcmp7anext" style="margin-right: 0px!important;" styleClass="Fright ResponsiveBtnFS spWid100" value="Next"
                                          rendered="#{tcmpb.pagemanager.nextButtonStat}"
                                          update=":ceForm:inputArea"
                                          disabled="#{tcmpb.sameStrategy}"
