--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final2.xhtml
@@ -32,7 +32,7 @@
 							<div class="EmptyBox10"></div>
 							<div class="Container100 Fleft TexAlCenter"
 								 style="padding: 0px 20px; box-sizing: border-box;">
-								<strong>#{tcmpb.fixedModelName}</strong>
+								<strong><h:outputText id="modelnamelbl" value="#{tcmpb.fixedModelName}"/></strong>
 							</div>
 							<div class="EmptyBox20"></div>
 							<div class="Container100 DispBlock gray">
@@ -44,7 +44,7 @@
 									<p:slider id="allocSlider" for="allocValue" minValue="0"
 											  maxValue="#{tcmpb.maxAssetAllocatonPoints}" step="1">
 										<p:ajax event="slideEnd"
-												update="ceForm:graphArea, ceForm:tcmFinal, ceForm:tcmSliderArea"
+												update=":ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea"
 												listener="#{tcmpb.onAllocSlider}" />
 									</p:slider>
 								</div>
@@ -55,10 +55,17 @@
 									<div class="ContainerIndent">
 										<p:commandButton id="allocSliderResetButton" value="Recommended"
 														 styleClass="uob_button"
-														 update=":ceForm:tcmSliderArea, :ceForm:graphArea, ceForm:tcmFinal"
+														 update=":ceForm:graphArea, :ceForm:tcmFinal, :ceForm:modelnamelbl, :ceForm:modeldescrlbl, :ceForm:finalbuttonArea"
 														 actionListener="#{tcmpb.doAllocReset}"/>
 									</div>
 								</div>
+
+							</div>
+							<div class="EmptyBox10"></div>
+							<div class="Container100 Fleft TexAlLeft"
+								 style="padding: 0px 20px; box-sizing: border-box;">
+								<h:outputText id="modeldescrlbl" value="#{tcmpb.newLongDesc}"/>
+
 							</div>
 
 						</p:panel>
@@ -173,23 +180,26 @@
 				</div>
 
 			</div>
-			<div class="Container100 Responsive100 summaryPageBtn" style="text-align: center;">
-				<p:commandButton styleClass="prev ResponsiveBtnFS Fleft spWid100" id="tcmpnafprevious"
-					value="Start Over" update=":ceForm:inputArea" immediate="true"
-					actionListener="#{tcmpb.startover}" />
+			<p:panel id="finalbuttonArea" style="background-color: transparent; border: 0px">
+				<div class="Container100 Responsive100 summaryPageBtn" style="text-align: center;">
+					<p:commandButton styleClass="prev ResponsiveBtnFS Fleft spWid100" id="tcmpnafprevious"
+									 value="Start Over" update=":ceForm:inputArea" immediate="true"
+									 actionListener="#{tcmpb.startover}" />
 
-				<p:commandButton type="button"
-					styleClass="fineTuneBtn fineTuneBtnImg spWid100" id="tcmpnafftbtn" value="Change Strategy">
-					<p:effect type="slide" event="click" for="fineTunePanel">
-						<f:param name="mode" value="'show'" />
-					</p:effect>
-				</p:commandButton>
+					<p:commandButton type="button"
+									 styleClass="fineTuneBtn fineTuneBtnImg spWid100" id="tcmpnafftbtn" value="Change Strategy">
+						<p:effect type="slide" event="click" for="fineTunePanel">
+							<f:param name="mode" value="'show'" />
+						</p:effect>
+					</p:commandButton>
 
-				<p:commandButton style="margin-right: 0px!important;" styleClass="Fright ResponsiveBtnFS spWid100" id="tcmpnafopenacct"
-					value="#{tcmpb.fundButtonText}" update=":ceForm:inputArea"
-					actionListener="#{tcmpb.fundAccount}" />
+					<p:commandButton style="margin-right: 0px!important;" styleClass="Fright ResponsiveBtnFS spWid100" id="tcmpnafopenacct"
+									 value="#{tcmpb.fundButtonText}" update=":ceForm:inputArea"
+									 actionListener="#{tcmpb.fundAccount}" />
 
-			</div>
+				</div>
+
+			</p:panel>
 		</p:fieldset>
 
 		<div class="EmptyBox10"></div>
